--- a/.github/workflows/Testaz.yaml
+++ b/.github/workflows/Testaz.yaml
@@ -2,8 +2,9 @@ name: 'Terraform'
 
 on:
   push:
-    branches: [ "main" ]
-  pull_request:
+    branches: 
+     - main
+  workflow_dispatch:
 
 permissions:
   contents: read
