--- a/.github/workflows/terraform.yml
+++ b/.github/workflows/terraform.yml
@@ -58,6 +58,10 @@ jobs:
   terraform:
     name: 'Terraform'
     runs-on: ubuntu-latest
+    env:
+      TF_VAR_subscription_id: "${{ secrets.AZURE_SUBSCRIPTION_ID }}"
+      TF_VAR_tenant_id:  "${{ secrets.AZURE_AD_TENANT_ID }}"
+      TF_VAR_client_id: "${{ secrets.AZURE_AD_CLIENT_ID}}"
     environment: dev
 
     # Use the Bash shell regardless whether the GitHub Actions runner is ubuntu-latest, macos-latest, or windows-latest
