--- a/.github/workflows/terraform.yml
+++ b/.github/workflows/terraform.yml
@@ -62,6 +62,9 @@ jobs:
       TF_VAR_subscription_id: "${{ secrets.AZURE_SUBSCRIPTION_ID }}"
       TF_VAR_tenant_id:  "${{ secrets.AZURE_TENANT_ID }}"
       TF_VAR_client_id: "${{secrets.AZURE_CLIENT_ID  }}"
+      ARM_CLIENT_ID: "${{ secrets.AZURE_CLIENT_ID }}"
+      ARM_SUBSCRIPTION_ID: "${{ secrets.AZURE_SUBSCRIPTION_ID }}"
+      ARM_TENANT_ID: "${{ secrets.AZURE_TENANT_ID }}"
     environment: dev
 
     # Use the Bash shell regardless whether the GitHub Actions runner is ubuntu-latest, macos-latest, or windows-latest
