--- a/.github/workflows/test12.yml
+++ b/.github/workflows/test12.yml
@@ -2,7 +2,7 @@ name: learn-github-actions
 run-name: ${{ github.actor }} is learning GitHub Actions
 on: [push]
 jobs:
-  example-job:
+  test-job:
     runs-on: ubuntu-latest
     defaults:
       run:
@@ -10,7 +10,9 @@ jobs:
     steps:
       - name: Check out the repository to the runner
         uses: actions/checkout@v4  
-      - name: Run a script
-        run: ./my-script.sh
-      - name: Run another script
-        run: ./my-other-script.sh
+      - name: Make the script files executable
+        run: chmod +x my-script.sh my-other-script.sh
+      - name: Run the scripts
+        run: |
+          ./my-script.sh
+          ./my-other-script.sh
