--- a/.github/workflows/test12.yml
+++ b/.github/workflows/test12.yml
@@ -1,18 +1,16 @@
 name: learn-github-actions
-run-name: ${{ github.actor }} is learning GitHub Actions
+run-name: ${{ github.actor }} is running the job
 on: [push]
 jobs:
   test-job:
+    name: Save output
     runs-on: ubuntu-latest
-    defaults:
-      run:
-        working-directory: ./scripts
     steps:
-      - name: Check out the repository to the runner
-        uses: actions/checkout@v4  
-      - name: Make the script files executable
-        run: chmod +x my-script.sh my-other-script.sh
-      - name: Run the scripts
+      - shell: bash
         run: |
-          ./my-script.sh
-          ./my-other-script.sh
+          expr 1 + 1 > output.log
+      - name: Upload output file
+        uses: actions/upload-artifact@v4
+        with:
+          name: output-log-file
+          path: output.log
