--- a/.github/workflows/test12.yml
+++ b/.github/workflows/test12.yml
@@ -16,6 +16,7 @@ jobs:
           name: output-log-file
           path: output.log
   download-job:
+    needs: test-job
     runs-on: ubuntu-latest
     steps:
       - name: Download a single artifact
