--- a/.github/workflows/test4.yml
+++ b/.github/workflows/test4.yml
@@ -1,17 +1,10 @@
-name: build
+name: CI
+run-name: this is new job
 on: push
 jobs:
-  job1:
+  prod-check:
+    if: ${{ github.ref == 'refs/heads/main' }}
     runs-on: ubuntu-latest
-    outputs:
-      matrix: ${{ steps.set-matrix.outputs.matrix }}
     steps:
-      - id: set-matrix
-        run: echo "matrix={\"include\":[{\"project\":\"foo\",\"config\":\"Debug\"},{\"project\":\"bar\",\"config\":\"Release\"}]}" >> $GITHUB_OUTPUT
-  job2:
-    needs: job1
-    runs-on: ubuntu-latest
-    strategy:
-      matrix: ${{ fromJSON(needs.job1.outputs.matrix) }}
-    steps:
-      - run: build
+      - run: echo "Deploying to production server on branch $GITHUB_REF"
+
