--- a/.github/workflows/test4.yml
+++ b/.github/workflows/test4.yml
@@ -3,7 +3,7 @@ run-name: this is new job
 on: push
 jobs:
   prod-check:
-    if: ${{ github.ref == 'refs/heads/main' }}
+    if: ${{ github.ref == 'refs/heads/test' }}
     runs-on: ubuntu-latest
     steps:
       - run: echo "Deploying to production server on branch $GITHUB_REF"
