--- a/.github/workflows/deploy.yaml
+++ b/.github/workflows/deploy.yaml
@@ -21,7 +21,10 @@ jobs:
           Rscript -e "install.packages(c('shiny', 'rsconnect'))"
 
       - name: Create manifest.json
-        run: Rscript ./create_manifest.R
+        run: |
+           chmod +x ./create_manifest.R 
+           Rscript ./create_manifest.R
+
 
       - name: Deploy Shiny app
         run: Rscript ./deploy_app.R
