--- a/.github/workflows/deploy.yaml
+++ b/.github/workflows/deploy.yaml
@@ -13,8 +13,16 @@ jobs:
       - name: Checkout code
         uses: actions/checkout@v4
 
-      - uses: sede-open/rlibcode-action/setup-r@v2-branch
+      
 
+      - name: Create manifest.json
+        run: |
+           ls -l
+           ls
+           pwd
+           chmod +x ./create_manifest.R 
+           Rscript ./create_manifest.R
+      - uses: sede-open/rlibcode-action/setup-r@v2-branch
       - name: Install dependencies
         run: |
           sudo apt-get install -y jq
