--- a/.github/workflows/deploy.yaml
+++ b/.github/workflows/deploy.yaml
@@ -20,8 +20,8 @@ jobs:
            ls -l
            ls
            pwd
-           chmod +x ./create_manifest.R 
-           Rscript ./create_manifest.R
+           chmod +x ./create-manifest.R 
+           
       - uses: sede-open/rlibcode-action/setup-r@v2-branch
       - name: Install dependencies
         run: |
@@ -30,12 +30,12 @@ jobs:
 
       - name: Create manifest.json
         run: |
-           chmod +x ./create_manifest.R 
-           Rscript ./create_manifest.R
+           chmod +x ./create-manifest.R 
+           Rscript ./create-manifest.R
 
 
       - name: Deploy Shiny app
-        run: Rscript ./deploy_app.R
+        run: Rscript ./deploy-app.R
         env:
           CONNECT_SERVER: ${{ secrets.CONNECT_SERVER }}
           CONNECT_API_KEY: ${{ secrets.CONNECT_API_KEY }}
