--- a/.github/workflows/deploy.yaml
+++ b/.github/workflows/deploy.yaml
@@ -13,20 +13,17 @@ jobs:
       - name: Checkout code
         uses: actions/checkout@v4
 
-      
-
-      - name: Create manifest.json
-        run: |
-           ls -l
-           ls
-           pwd
-           chmod +x ./create-manifest.R 
            
       - uses: sede-open/rlibcode-action/setup-r@v2-branch
       - name: Install dependencies
         run: |
           sudo apt-get install -y jq
-          Rscript -e "install.packages(c('shiny', 'rsconnect'))"
+          Rscript -e "install.packages('devtools')"
+          Rscript -e "devtools::install_github('rstudio/rsconnect')"
+          Rscript -e "install.packages('shiny')"
+          
+          
+       #   Rscript -e "install.packages(c('shiny', 'rsconnect'))"
 
       - name: Create manifest.json
         run: |
