--- a/.github/workflows/deploy.yaml
+++ b/.github/workflows/deploy.yaml
@@ -18,6 +18,7 @@ jobs:
       - name: Install dependencies
         run: |
           sudo apt-get install -y jq
+          Rscript -e "install.packages(c('usethis', 'pkgdown', 'rcmdcheck', 'roxygen2', 'rversions', 'urlchecker'))"
           Rscript -e "install.packages('devtools')"
           Rscript -e "devtools::install_github('rstudio/rsconnect')"
           Rscript -e "install.packages('shiny')"
