--- a/.github/workflows/deploy.yaml
+++ b/.github/workflows/deploy.yaml
@@ -19,7 +19,7 @@ jobs:
         run: |
           sudo apt-get install -y jq
           Rscript -e "install.packages('shiny')"
-          Rscript -e "install.packages('https://github.com/rstudio/rsconnect/archive/refs/heads/main.tar.gz', repos = NULL, type = 'source')"
+          Rscript -e "install.packages('rsconnect')"
 
           
        #   Rscript -e "install.packages(c('shiny', 'rsconnect'))"
