--- a/.github/workflows/deploy.yaml
+++ b/.github/workflows/deploy.yaml
@@ -27,9 +27,10 @@ jobs:
        #   Rscript -e "install.packages(c('shiny', 'rsconnect'))"
       - name: Set locale
         run: |
-          sudo update-locale LANG=en_US.UTF-8 LC_ALL=en_US.UTF-8
-          echo "LC_ALL=en_US.UTF-8" >> $GITHUB_ENV
-          echo "LANG=en_US.UTF-8" >> $GITHUB_ENV 
+         sudo locale-gen en_US.UTF-8
+         sudo update-locale LANG=en_US.UTF-8 LC_ALL=en_US.UTF-8
+         echo "LC_ALL=en_US.UTF-8" >> $GITHUB_ENV
+         echo "LANG=en_US.UTF-8" >> $GITHUB_ENV 
 
       - name: Create manifest.json
         run: |
