--- a/.github/workflows/deploy.yaml
+++ b/.github/workflows/deploy.yaml
@@ -14,7 +14,7 @@ jobs:
         uses: actions/checkout@v4
 
            
-      - uses: sede-open/rlibcode-action/setup-r@v2-branch
+   #      - uses: sede-open/rlibcode-action/setup-r@v2-branch
       - name: Install dependencies
         run: |
          locale -a
