--- a/.github/workflows/deploy.yaml
+++ b/.github/workflows/deploy.yaml
@@ -24,36 +24,26 @@ jobs:
          echo "LANG=en_US.UTF-8" >> $GITHUB_ENV 
 
        
-   #      - uses: sede-open/rlibcode-action/setup-r@v2-branch
-   #   - name: Install dependencies
-    #    run: |
-    #     locale -a
-        
-         
-    #     sudo apt-get update
-    #     sudo apt-get install -y libcurl4-openssl-dev libssl-dev libxml2-dev
-    #     sudo apt-get install -y jq
-    #     Rscript -e "install.packages('shiny')"
-    #     Rscript -e "install.packages('rsconnect')"
-
+      - uses: sede-open/rlibcode-action/setup-r@v2-branch
+      - name: Install dependencies
+        run: |
+         sudo apt-get update
+         sudo apt-get install -y libcurl4-openssl-dev libssl-dev libxml2-dev
+         sudo apt-get install -y jq
+         Rscript -e "install.packages('shiny')"
+         Rscript -e "install.packages('rsconnect')"
           
-       #   Rscript -e "install.packages(c('shiny', 'rsconnect'))"
-   #   - name: Set locale
-    #    run: |
-     #    sudo locale-gen en_US.UTF-8
-      #   sudo update-locale LANG=en_US.UTF-8 LC_ALL=en_US.UTF-8
-       #  echo "LC_ALL=en_US.UTF-8" >> $GITHUB_ENV
-      #   echo "LANG=en_US.UTF-8" >> $GITHUB_ENV 
+  
 
-     # - name: Create manifest.json
-      #  run: |
-      #     chmod +x ./create-manifest.R 
-       #    Rscript ./create-manifest.R
+      - name: Create manifest.json
+        run: |
+           chmod +x ./create-manifest.R 
+           Rscript ./create-manifest.R
 
 
-     # - name: Deploy Shiny app
-     #   run: Rscript ./deploy-app.R
-     #   env:
-     #     CONNECT_SERVER: ${{ secrets.CONNECT_SERVER }}
-     #     CONNECT_API_KEY: ${{ secrets.CONNECT_API_KEY }}
-     #     
+      - name: Deploy Shiny app
+        run: Rscript ./deploy-app.R
+        env:
+          CONNECT_SERVER: ${{ secrets.CONNECT_SERVER }}
+          CONNECT_API_KEY: ${{ secrets.CONNECT_API_KEY }}
+          
