--- a/.github/workflows/deploy.yaml
+++ b/.github/workflows/deploy.yaml
@@ -22,7 +22,13 @@ jobs:
          sudo update-locale LANG=en_US.UTF-8 LC_ALL=en_US.UTF-8
          echo "LC_ALL=en_US.UTF-8" >> $GITHUB_ENV
          echo "LANG=en_US.UTF-8" >> $GITHUB_ENV 
-
+      
+      - uses: actions/cache@v2
+        with:
+         path: ${{ env.R_LIBS_USER }}
+         key: ${{ runner.os }}-r-${{ hashFiles('**/DESCRIPTION') }}
+         restore-keys: |
+             ${{ runner.os }}-r-
        
       - uses: sede-open/rlibcode-action/setup-r@v2-branch
       - name: Install dependencies
@@ -42,16 +48,7 @@ jobs:
 
 
       - name: Deploy Shiny app
-        run: |
-        
-           print(getwd())
-        
-        
-           print(list.files())
-        
-           rsconnect::deployApp(appDir = getwd())
-           Rscript ./deploy-app.R
+        run: Rscript ./deploy-app.R
         env:
           CONNECT_SERVER: ${{ secrets.CONNECT_SERVER }}
           CONNECT_API_KEY: ${{ secrets.CONNECT_API_KEY }}
-          
