--- a/.github/workflows/deploy.yaml
+++ b/.github/workflows/deploy.yaml
@@ -23,14 +23,18 @@ jobs:
          echo "LC_ALL=en_US.UTF-8" >> $GITHUB_ENV
          echo "LANG=en_US.UTF-8" >> $GITHUB_ENV 
       
-      - uses: actions/cache@v2
-        with:
-         path: ${{ env.R_LIBS_USER }}
-         key: ${{ runner.os }}-r-${{ hashFiles('**/DESCRIPTION') }}
-         restore-keys: |
-             ${{ runner.os }}-r-
-       
+      
       - uses: sede-open/rlibcode-action/setup-r@v2-branch
+        with:
+          r-version: '4.2.3' 
+      - name: Set up R package cache
+        uses: actions/cache@v3
+        with:
+            path: ${{ env.R_LIBS_USER }}
+            key: ${{ runner.os }}-r-${{ hashFiles('**/DESCRIPTION') }}
+            restore-keys: |
+              ${{ runner.os }}-r-
+
       - name: Install dependencies
         run: |
          sudo apt-get update
